chore: Update to latests

--- a/reference/ToDo/Directory.Packages.props
+++ b/reference/ToDo/Directory.Packages.props
@@ -1,9 +1,8 @@
 <Project ToolsVersion="15.0">
   <!--
-    Note that the $(UnoVersion) comes from the Uno.Sdk. You should not update it manually. To update the version of Uno,
-    you should instead update the Sdk version in the global.json file.
+    To update the version of Uno, you should instead update the Sdk version in the global.json file.
 
-    See https://aka.platform.uno/upgrade-uno-packages for more information.
+    See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
   </ItemGroup>
@@ -11,7 +10,7 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="7.4.1" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.7" />
   </ItemGroup>
 </Project>
