--- a/reference/ToDo/ToDo/ToDo.csproj
+++ b/reference/ToDo/ToDo/ToDo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
       net8.0-android;
@@ -39,13 +39,14 @@
       Material;
       Hosting;
       Toolkit;
-      Mvux;
+      MVUX;
       Mvvm;
       Configuration;
       Http;
       Serialization;
       Localization;
       Authentication;
+      AuthenticationMsal;
       Navigation;
       ExtensionsCore;
     </UnoFeatures>
