chore: Updating to latest

--- a/reference/Commerce/Commerce/Commerce.csproj
+++ b/reference/Commerce/Commerce/Commerce.csproj
@@ -40,7 +40,7 @@
       Hosting;
       Toolkit;
       Logging;
-      Mvux;
+      MVUX;
       Mvvm;
       Configuration;
       Http;
@@ -52,7 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="products.json" />
+    <!--<Content Include="products.json" />-->
     <None Remove="reviews.json" />
+    <!--<Content Include="reviews.json" />-->
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="products.json">
