--- a/reference/Commerce/Directory.Packages.props
+++ b/reference/Commerce/Directory.Packages.props
@@ -1,12 +1,9 @@
 <Project ToolsVersion="15.0">
   <!--
-    Note that the $(UnoVersion) comes from the Uno.Sdk. You should not update it manually. To update the version of Uno,
-    you should instead update the Sdk version in the global.json file.
+    To update the version of Uno, you should instead update the Sdk version in the global.json file.
 
-    See https://aka.platform.uno/upgrade-uno-packages for more information.
+    See https://aka.platform.uno/using-uno-sdk for more information.
   -->
-  <ItemGroup>
-  </ItemGroup>
   <ItemGroup>
     <PackageVersion Include="SkiaSharp.Views.WinUI" Version="2.88.8" />
   </ItemGroup>
