feat: add unit to project, fix build version, fix MVUX

--- a/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -7,6 +7,7 @@
       net8.0-windows10.0.19041;
       net8.0-desktop;
       net8.0-browserwasm;
+      net8.0;
     </TargetFrameworks>
 
     <OutputType>Exe</OutputType>
@@ -39,7 +40,7 @@
       CSharpMarkup;
       Material;
       Toolkit;
-      Mvux;
+      MVUX;
       ExtensionsCore;
     </UnoFeatures>
   </PropertyGroup>
