--- a/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -38,7 +38,7 @@
     <UnoFeatures>
       Material;
       Toolkit;
-      Mvux;
+      MVUX;
       ExtensionsCore;
     </UnoFeatures>
   </PropertyGroup>
