--- a/UI/WindowingSamples/WindowingSamples/WindowingSamples.csproj
+++ b/UI/WindowingSamples/WindowingSamples/WindowingSamples.csproj
@@ -34,5 +34,16 @@
     <UnoFeatures>
     </UnoFeatures>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="FullScreenModeWindow.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="FullScreenModeWindow.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <UpToDateCheckInput Remove="FullScreenModeWindow.xaml" />
+  </ItemGroup>
 
 </Project>
