feat: MauiCOntrols migration

--- a/UI/MauiEmbedding/ArcGisApp/ArcGisApp.MauiControls/ArcGisApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/ArcGisApp/ArcGisApp.MauiControls/ArcGisApp.MauiControls.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Esri.ArcGISRuntime.Maui" />
     <PackageReference Include="Microsoft.Maui.Controls" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
   </ItemGroup>
