--- a/UI/MauiEmbedding/ArcGisApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/ArcGisApp/Directory.Packages.props
@@ -5,6 +5,7 @@
     See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
+    <PackageVersion Include="Esri.ArcGISRuntime.Maui" Version="200.4.0" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
   </ItemGroup>
