--- a/UI/PongWars/UnoPongWars/Directory.Build.props
+++ b/UI/PongWars/UnoPongWars/Directory.Build.props
@@ -13,8 +13,9 @@
     <NoWarn>$(NoWarn);NU1507;NETSDK1201;PRI257</NoWarn>
   </PropertyGroup>
 
+  <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>4.2.0-dev.36</UnoExtensionsVersion>
+    <UnoExtensionsVersion>4.1.21</UnoExtensionsVersion>
     <UnoToolkitVersion>6.0.18</UnoToolkitVersion>
     <UnoThemesVersion>5.0.13</UnoThemesVersion>
     <UnoCSharpMarkupVersion>5.2.13</UnoCSharpMarkupVersion>
