--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
@@ -12,8 +12,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <MauiXaml Remove="ChartControl.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Maui.Controls" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="ChartControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
 </Project>
