--- a/reference/Commerce/src/Commerce/Commerce.csproj
+++ b/reference/Commerce/src/Commerce/Commerce.csproj
@@ -52,9 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="products.json" />
-    <!--<Content Include="products.json" />-->
+    <Content Include="products.json" />
     <None Remove="reviews.json" />
-    <!--<Content Include="reviews.json" />-->
+    <Content Include="reviews.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="products.json">
