--- a/UI/MauiEmbedding/ArcGisApp/ArcGisApp.MauiControls/ArcGisApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/ArcGisApp/ArcGisApp.MauiControls/ArcGisApp.MauiControls.csproj
@@ -1,18 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net8.0-windows10.0.19041</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net8.0;net8.0-ios;net8.0-android;net8.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
+  <PropertyGroup>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">net8.0-windows10.0.19041</TargetFrameworks>
+    <TargetFrameworks>
+      net8.0;
+      net8.0-android;
+      net8.0-ios;
+      net8.0-maccatalyst;
+      $(TargetFrameworks);
+    </TargetFrameworks>
 
-		<UseMaui>true</UseMaui>
-		<SingleProject>true</SingleProject>
-	</PropertyGroup>
+    <UseMaui>true</UseMaui>
+    <SingleProject>true</SingleProject>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
-		<PackageReference Include="Esri.ArcGISRuntime.Maui" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Esri.ArcGISRuntime.Maui" />
+    <PackageReference Include="Microsoft.Maui.Controls" />
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+    <PackageReference Include="Uno.Extensions" />
+  </ItemGroup>
 
 </Project>
