--- a/UI/BindingSources/CSHARP/Binding/Binding.csproj
+++ b/UI/BindingSources/CSHARP/Binding/Binding.csproj
@@ -1,45 +1,24 @@
 <Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>
-      net8.0-android;
-      net8.0-ios;
-      net8.0-maccatalyst;
-      net8.0-windows10.0.19041;
-      net8.0-desktop;
-      net8.0-browserwasm;
-    </TargetFrameworks>
+	<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst;net8.0-windows10.0.19041;net8.0-desktop;net8.0-browserwasm;</TargetFrameworks>
 
-    <OutputType>Exe</OutputType>
-    <UnoSingleProject>true</UnoSingleProject>
+	<OutputType>Exe</OutputType>
+	<UnoSingleProject>true</UnoSingleProject>
 
-    <!-- Display name -->
-    <ApplicationTitle>Binding</ApplicationTitle>
-    <!-- App Identifier -->
-    <ApplicationId>com.companyname.Binding</ApplicationId>
-    <!-- Versions -->
-    <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-    <ApplicationVersion>1</ApplicationVersion>
-    <!--
-      If you encounter this error message:
+	<!-- Display name -->
+	<ApplicationTitle>Binding</ApplicationTitle>
+	<!-- App Identifier -->
+	<ApplicationId>com.companyname.Binding</ApplicationId>
+	<!-- Versions -->
+	<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+	<ApplicationVersion>1</ApplicationVersion>
 
-        error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-        Please update to a newer .NET SDK in order to reference this assembly.
-
-      This means that the two packages below must be aligned with the "build" version number of
-      the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-      must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-    -->
-    <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
-
-    <!--
-      UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
-      https://aka.platform.uno/singleproject-features
-    -->
-    <UnoFeatures>
-      CSharpMarkup;
-      Material;
-      Toolkit;
-    </UnoFeatures>
+	<UnoFeatures>
+	  CSharpMarkup;
+	  Material;
+	  Toolkit;
+	  Mvvm;
+	</UnoFeatures>
   </PropertyGroup>
 
 </Project>
