fix: Build fixes

--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
@@ -12,14 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <MauiXaml Remove="ChartControl.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="DataGridControl.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="DevExpress.Maui.Charts" />
+    <PackageReference Include="DevExpress.Maui.DataGrid" />
     <PackageReference Include="Microsoft.Maui.Controls" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
   </ItemGroup>
