--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp/DevExpressApp.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp/DevExpressApp.csproj
@@ -31,6 +31,7 @@
       Configuration;
       Http;
       Serialization;
+      LoggingSerilog;
       Localization;
       Navigation;
       ExtensionsCore;
