--- a/UI/MauiEmbedding/DevExpressApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/DevExpressApp/Directory.Packages.props
@@ -5,6 +5,8 @@
     See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
+    <PackageVersion Include="DevExpress.Maui.Charts" Version="23.2.4" />
+    <PackageVersion Include="DevExpress.Maui.DataGrid" Version="23.2.4" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
   </ItemGroup>
