--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
@@ -1,22 +1,42 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>net8.0-ios;net8.0-android</TargetFrameworks>
-		<TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
+  <PropertyGroup>
+    <TargetFrameworks>
+      net8.0;
+      net8.0-android;
+      net8.0-ios;
+    </TargetFrameworks>
 
-		<UseMaui>true</UseMaui>
-		<SingleProject>true</SingleProject>
-	</PropertyGroup>
+    <UseMaui>true</UseMaui>
+    <SingleProject>true</SingleProject>
+  </PropertyGroup>
 
-	<ItemGroup Condition=" Exists('GrialLicense') ">
-		<None Remove="GrialLicense" />
-		<EmbeddedResource Include="GrialLicense" />
-	</ItemGroup>
+  <ItemGroup>
+    <MauiXaml Remove="PieChartSample.xaml" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<!-- TODO: Uncomment -->
-		<!--<PackageReference Include="UXDivers.GrialMaui" />-->
-		<PackageReference Include="Microsoft.Maui.Controls" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
-	</ItemGroup>
+  <ItemGroup>
+    <None Remove="GrialLicense" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="GrialLicense" />
+    <EmbeddedResource Include="PieChartSample.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" />
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+    <PackageReference Include="UXDivers.GrialMaui" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
+    <PackageReference Include="UXDivers.GrialMaui" />
+  </ItemGroup>
+
 </Project>
