chore: navigation app.xaml.cs fix

--- a/reference/ToDo/src/ToDo/ToDo.csproj
+++ b/reference/ToDo/src/ToDo/ToDo.csproj
@@ -36,19 +36,14 @@
       https://aka.platform.uno/singleproject-features
     -->
     <UnoFeatures>
-      Authentication;
       AuthenticationMsal;
       Mvvm;
-      Extensions;
-      Material;
-      Hosting;
       Toolkit;
       Logging;
       MVUX;
-      Configuration;
       Serialization;
       Localization;
-      ThemeService;
+      Navigation;
     </UnoFeatures>
   </PropertyGroup>
 
