feat: single proj migration

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
@@ -15,9 +15,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="CommunityToolkit.Maui" />
     <PackageReference Include="Microsoft.Maui.Controls" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <MauiXaml Update="AvatarControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+    <MauiXaml Update="DrawingViewControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+    <MauiXaml Update="ExpanderControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+    <MauiXaml Update="SnackbarControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+    <MauiXaml Update="ToastControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
   </ItemGroup>
 
 </Project>
