--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
@@ -5,6 +5,7 @@
     See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
+    <PackageVersion Include="CommunityToolkit.Maui" Version="9.0.0" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
