chore: resolving PR comments

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Packages.props
@@ -7,7 +7,8 @@
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.Maui" Version="9.0.0" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+    <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.21" />
+    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.21" />
+    <PackageVersion Include="Microsoft.Maui.Graphics" Version="8.0.21" />
   </ItemGroup>
 </Project>
