chore: Add additional information on how to test the sample with the DevExpress NuGet Feed URL

--- a/UI/MauiEmbedding/DevExpressApp/src/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/src/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
@@ -12,8 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.Maui.Charts" />
-    <PackageReference Include="DevExpress.Maui.DataGrid" />
+    <!-- =============================================================== -->
+    <!-- ===== IMPORTANT: TODO: Uncomment to test the DevExpressApp ==== -->
+    <!-- ===== after you added the DevExpress NuGet Feed URL =========== -->
+    <!-- ===== (https://nuget.devexpress.com/#feed-url) ================ -->
+    <!-- =============================================================== -->
+    <!--<PackageReference Include="DevExpress.Maui.Charts" />-->
+    <!--<PackageReference Include="DevExpress.Maui.DataGrid" />-->
     <PackageReference Include="Microsoft.Maui.Controls" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
   </ItemGroup>
