--- a/UI/MauiEmbedding/DevExpressApp/src/Directory.Packages.props
+++ b/UI/MauiEmbedding/DevExpressApp/src/Directory.Packages.props
@@ -5,8 +5,13 @@
     See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
-    <PackageVersion Include="DevExpress.Maui.Charts" Version="23.2.6" />
-    <PackageVersion Include="DevExpress.Maui.DataGrid" Version="23.2.6" />
+    <!-- =============================================================== -->
+    <!-- ===== IMPORTANT: TODO: Uncomment to test the DevExpressApp ==== -->
+    <!-- ===== after you added the DevExpress NuGet Feed URL =========== -->
+    <!-- ===== (https://nuget.devexpress.com/#feed-url) ================ -->
+    <!-- =============================================================== -->
+    <!--<PackageVersion Include="DevExpress.Maui.Charts" Version="23.2.6" />-->
+    <!--<PackageVersion Include="DevExpress.Maui.DataGrid" Version="23.2.6" />-->
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
   </ItemGroup>
