feat: GrialKit single project migration

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
@@ -14,9 +14,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- TODO: Uncomment -->
-		<!--<PackageReference Include="UXDivers.GrialMaui" />-->
+		<PackageReference Include="CommunityToolkit.Maui" />
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="UXDivers.GrialMaui" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Templates\SwitchOption.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
