--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp/appsettings.json
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp/appsettings.json
@@ -2,6 +2,9 @@
   "AppConfig": {
     "Environment": "Production"
   },
+  "ApiClient": {
+    "UseNativeHandler": true
+  },
   "LocalizationConfiguration": {
     "Cultures": [
       "es",
