--- a/UI/MauiEmbedding/GrialKitApp/Directory.Build.props
+++ b/UI/MauiEmbedding/GrialKitApp/Directory.Build.props
@@ -1,74 +1,24 @@
 <Project>
+  <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 
-	<!--
-		If working on a single target framework, copy solution-config.props.sample to solution-config.props
-		and uncomment the appropriate lines in solution-config.props to build for the desired platforms only.
+    <!--
+      Adding NoWarn to remove build warnings
+      NU1507: Warning when there are multiple package sources when using CPM with no source mapping
+      NETSDK1201: Warning that specifying RID won't create self containing app
+      NETSDK1023:	Microsoft.Maui.Graphics reference required to avoid build error causes warning because it's already implicitly referenced by Maui SDK
+      PRI257: Ignore default language (en) not being one of the included resources (eg en-us, en-uk)
+    -->
+    <NoWarn>$(NoWarn);NU1507;NETSDK1201;NETSDK1023;PRI257</NoWarn>
+  </PropertyGroup>
 
-		https://platform.uno/docs/articles/guides/solution-building-single-targetframework.html 
-	-->
-	<Import Project="solution-config.props" Condition="exists('solution-config.props')" />
-	
-
-	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-
-		<DebugType>portable</DebugType>
-		<DebugSymbols>True</DebugSymbols>
-
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-
-		<NoWarn>$(NoWarn);CA1416;NU1507;NETSDK1023</NoWarn>
-
-		<DefaultLanguage>en</DefaultLanguage>
-
-		<IsAndroid>false</IsAndroid>
-		<IsIOS>false</IsIOS>
-		<IsMac>false</IsMac>
-		<IsMacCatalyst>false</IsMacCatalyst>
-		<IsWinAppSdk>false</IsWinAppSdk>
-
-		<MauiVersion Condition=" '$(MauiVersion)' == '' ">8.0.7</MauiVersion>
-		<AndroidMaterialVersion  Condition=" '$(AndroidMaterialVersion)' == '' ">1.10.0.1</AndroidMaterialVersion>
-		<AndroidXNavigationVersion  Condition=" '$(AndroidXNavigationVersion)' == '' ">2.6.0.1</AndroidXNavigationVersion>
-		<AndroidXCollectionVersion  Condition=" '$(AndroidXCollectionVersion)' == '' ">1.3.0.1</AndroidXCollectionVersion>
-	</PropertyGroup>
-
-	<Choose>
-		<When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
-			<PropertyGroup>
-				<IsAndroid>true</IsAndroid>
-				<SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
-			</PropertyGroup>
-		</When>
-		<When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
-			<PropertyGroup>
-				<IsIOS>true</IsIOS>
-				<SupportedOSPlatformVersion>14.2</SupportedOSPlatformVersion>
-			</PropertyGroup>
-		</When>
-		<When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'macos'">
-			<PropertyGroup>
-				<IsMac>true</IsMac>
-				<SupportedOSPlatformVersion>10.14</SupportedOSPlatformVersion>
-			</PropertyGroup>
-		</When>
-		<When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
-			<PropertyGroup>
-				<IsMacCatalyst>true</IsMacCatalyst>
-				<SupportedOSPlatformVersion>14.0</SupportedOSPlatformVersion>
-			</PropertyGroup>
-		</When>
-		<When Condition="$(TargetFramework.Contains('windows10'))">
-			<PropertyGroup>
-				<IsWinAppSdk>true</IsWinAppSdk>
-				
-				<SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
-				<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
-				<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
-		
-			</PropertyGroup>
-		</When>
-	</Choose>
-
+  <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
+  <PropertyGroup>
+    <UnoExtensionsVersion>4.1.24</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.0.24</UnoToolkitVersion>
+    <UnoThemesVersion>5.0.13</UnoThemesVersion>
+    <UnoCSharpMarkupVersion>5.2.14</UnoCSharpMarkupVersion>
+  </PropertyGroup>
 </Project>
