feat: ChatGPT - Use OpenAI official SDK

--- a/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
+++ b/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
@@ -29,8 +29,7 @@
 	  Configuration;
 	</UnoFeatures>
   </PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Betalgo.OpenAI" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="OpenAI" />
+  </ItemGroup>
 </Project>
