--- a/UI/ChatGPT/src/Directory.Packages.props
+++ b/UI/ChatGPT/src/Directory.Packages.props
@@ -5,6 +5,8 @@
 	See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
-	  <PackageVersion Include="Betalgo.OpenAI" Version="7.4.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="OpenAI" Version="2.0.0-beta.7" />
   </ItemGroup>
 </Project>
