chore: clean up

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp/GrialKitApp.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp/GrialKitApp.csproj
@@ -9,9 +9,9 @@
     <UnoSingleProject>true</UnoSingleProject>
 
     <!-- Display name -->
-    <ApplicationTitle>GrialKitApp</ApplicationTitle>
+    <ApplicationTitle>GrialControlsTestBed</ApplicationTitle>
     <!-- App Identifier -->
-    <ApplicationId>com.companyname.GrialKitApp</ApplicationId>
+    <ApplicationId>com.grialcontrolstestbed</ApplicationId>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
@@ -45,15 +45,4 @@
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Page Include="Presentation\MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\SecondPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Shell.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
 </Project>
