chore: clean up

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
@@ -8,22 +8,16 @@
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
-  <ItemGroup Condition=" Exists('GrialLicense') ">
+  <!--<ItemGroup Condition=" Exists('GrialLicense') ">
     <None Remove="GrialLicense" />
     <EmbeddedResource Include="GrialLicense" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" />
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
 		<PackageReference Include="UXDivers.GrialMaui" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiXaml Update="Templates\SwitchOption.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
