chore: Final fixes for single project migration for Commerce sample app

--- a/reference/Commerce/src/Commerce/Commerce.csproj
+++ b/reference/Commerce/src/Commerce/Commerce.csproj
@@ -44,6 +44,7 @@
       Mvvm;
       Configuration;
       Http;
+      Skia;
       Serialization;
       Localization;
       Navigation;
@@ -64,8 +65,4 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.19041'">
-    <PackageReference Include="SkiaSharp.Views.WinUI" />
-  </ItemGroup>
-
 </Project>
