fix(ToDo): Multiple colors and UI related issues

--- a/reference/ToDo/src/ToDo/ToDo.csproj
+++ b/reference/ToDo/src/ToDo/ToDo.csproj
@@ -48,6 +48,10 @@
     </UnoFeatures>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <UnoIconForegroundScale>0.5</UnoIconForegroundScale>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
