chore: Added config files and fixed uno logo

--- a/UI/Navigation/NavigationWithXaml/NavigationWithXaml/NavigationWithXaml.csproj
+++ b/UI/Navigation/NavigationWithXaml/NavigationWithXaml/NavigationWithXaml.csproj
@@ -43,10 +43,6 @@
       ThemeService;
     </UnoFeatures>
   </PropertyGroup>
-  <ItemGroup>
-    <Page Update="Presentation\SamplePage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </Page>
-  </ItemGroup>
+  <Import Project="..\..\Common\shared.targets" />
 
 </Project>
