--- a/UI/Navigation/src/Navigation/Navigation.csproj
+++ b/UI/Navigation/src/Navigation/Navigation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
       net8.0-android;
@@ -26,6 +26,7 @@
       Toolkit;
       Mvvm;
       Navigation;
+      Extensions;
     </UnoFeatures>
   </PropertyGroup>
 </Project>
