fix: Display a message dialog in a different page

--- a/UI/Navigation/src/Navigation/Navigation.csproj
+++ b/UI/Navigation/src/Navigation/Navigation.csproj
@@ -29,4 +29,15 @@
       Extensions;
     </UnoFeatures>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Presentation\MessageDialog\MessageDialogPage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Presentation\MessageDialog\MessageDialogPage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Presentation\MessageDialog\MessageDialogPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
 </Project>
