feat: Display a Modal Flyout Dialog

--- a/UI/Navigation/src/Navigation/Navigation.csproj
+++ b/UI/Navigation/src/Navigation/Navigation.csproj
@@ -30,13 +30,22 @@
     </UnoFeatures>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Presentation\MessageDialog\MessageDialogPage.xaml" />
+    <None Remove="Presentation\ModalDialog\ModalContentDialog.xaml" />
+    <None Remove="Presentation\ModalDialog\ModalDialogSecondPage.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <UpToDateCheckInput Remove="Presentation\MessageDialog\MessageDialogPage.xaml" />
+    <UpToDateCheckInput Remove="Presentation\ModalDialog\ModalDialogSecondPage.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Presentation\MessageDialog\MessageDialogPage.xaml">
+    <Page Update="Presentation\ModalDialog\ModalDialogSecondPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Presentation\ModalDialog\ModalContentDialog.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Presentation\ModalDialog\ModalContentDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
