--- a/UI/Navigation/src/Directory.Build.props
+++ b/UI/Navigation/src/Directory.Build.props
@@ -8,9 +8,8 @@
 
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>4.1.24</UnoExtensionsVersion>
-    <UnoToolkitVersion>6.0.24</UnoToolkitVersion>
-    <UnoThemesVersion>5.0.13</UnoThemesVersion>
-    <UnoCSharpMarkupVersion>5.2.14</UnoCSharpMarkupVersion>
+    <UnoExtensionsVersion>4.3.0-dev.9</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.2.0-dev.12</UnoToolkitVersion>
+    <UnoThemesVersion>5.2.0-dev.13</UnoThemesVersion>
   </PropertyGroup>
 </Project>
