--- a/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewMigration.csproj
+++ b/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewMigration.csproj
@@ -37,6 +37,7 @@
     </UnoFeatures>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assets\user.png" />
     <None Remove="CardViewCodePage.xaml" />
     <None Remove="CardViewXamlPage.xaml" />
     <None Remove="ControlTemplatePage.xaml" />
