chore: Add ShowMeTheXaml

--- a/UI/Navigation/src/Directory.Packages.props
+++ b/UI/Navigation/src/Directory.Packages.props
@@ -6,4 +6,8 @@
   -->
   <ItemGroup>
   </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="Uno.ShowMeTheXAML" Version="2.0.0-dev0015" />
+    <PackageVersion Include="Uno.ShowMeTheXAML.MSBuild" Version="2.0.0-dev0015" />
+  </ItemGroup>
 </Project>
