--- a/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewMigration.csproj
+++ b/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewMigration.csproj
@@ -13,7 +13,7 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
     <!-- Package Publisher -->
-    <ApplicationPublisher>domin</ApplicationPublisher>
+    <ApplicationPublisher>Uno Platform</ApplicationPublisher>
     <!-- Package Description -->
     <Description>CardViewMigration powered by Uno Platform.</Description>
     <!--
