chore: clean up old files

--- a/UI/CountryDataSample/src/CountryDataSample/CountryDataSample.csproj
+++ b/UI/CountryDataSample/src/CountryDataSample/CountryDataSample.csproj
@@ -42,8 +42,18 @@
       Material;
     </UnoFeatures>
   </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="CountryData.Standard" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="appsettings.development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
