fix: misc fixes

--- a/UI/Navigation/src/Navigation/Navigation.csproj
+++ b/UI/Navigation/src/Navigation/Navigation.csproj
@@ -29,4 +29,7 @@
       Extensions;
     </UnoFeatures>
   </PropertyGroup>
+  <ItemGroup>
+    <UnoImage Update="Assets\Icons\close.svg" Link="Assets\Images\close.svg" />
+  </ItemGroup>
 </Project>
