chore: Add permissions

--- a/UI/BluetoothExplorer/BluetoothExplorer/BluetoothExplorer/Platforms/iOS/Info.plist
+++ b/UI/BluetoothExplorer/BluetoothExplorer/BluetoothExplorer/Platforms/iOS/Info.plist
@@ -34,6 +34,11 @@
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 
+		<key>NSBluetoothAlwaysUsageDescription</key>
+		<string>This app requires Bluetooth to demonstrate the Bluetooth LE APIs</string>
+		<key>NSBluetoothPeripheralUsageDescription</key>
+		<string>This app requires Bluetooth to demonstrate the Bluetooth LE APIs</string>
+
 		<!--
 		Adjust this to your application's encryption usage.
 		<key>ITSAppUsesNonExemptEncryption</key>
