chore: Minor fixes

--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.csproj
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.csproj
@@ -13,7 +13,7 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
     <!-- Package Publisher -->
-    <ApplicationPublisher>domin</ApplicationPublisher>
+    <ApplicationPublisher>Uno Platform</ApplicationPublisher>
     <!-- Package Description -->
     <Description>AutoSuggestSample powered by Uno Platform.</Description>
     <!--
