--- a/UI/Navigation/src/Directory.Build.props
+++ b/UI/Navigation/src/Directory.Build.props
@@ -8,8 +8,8 @@
 
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>4.3.0-dev.9</UnoExtensionsVersion>
-    <UnoToolkitVersion>6.2.0-dev.12</UnoToolkitVersion>
-    <UnoThemesVersion>5.2.0-dev.13</UnoThemesVersion>
+    <UnoExtensionsVersion>4.2.2</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.1.8</UnoToolkitVersion>
+    <UnoThemesVersion>5.1.7</UnoThemesVersion>
   </PropertyGroup>
 </Project>
