chore: Use Responsive Extensions

--- a/UI/Navigation/src/Directory.Build.props
+++ b/UI/Navigation/src/Directory.Build.props
@@ -9,7 +9,7 @@
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
     <UnoExtensionsVersion>4.2.2</UnoExtensionsVersion>
-    <UnoToolkitVersion>6.1.8</UnoToolkitVersion>
+    <UnoToolkitVersion>6.2.0-dev.37</UnoToolkitVersion>
     <UnoThemesVersion>5.1.7</UnoThemesVersion>
   </PropertyGroup>
 </Project>
