--- a/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
+++ b/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
@@ -20,6 +20,8 @@
 	<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 	<ApplicationVersion>1</ApplicationVersion>
 
+	<WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
+
 	<UnoFeatures>
 	  CSharpMarkup;
 	  Material;
