fix: skiasharp packages

--- a/UI/SkottieSample/SkottieSample/SkottieSample.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.csproj
@@ -37,4 +37,11 @@
     </UnoFeatures>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Win32" />
+    <PackageReference Include="SkiaSharp.Skottie" />
+  </ItemGroup>
+
 </Project>
