--- a/UI/SkottieSample/Directory.Packages.props
+++ b/UI/SkottieSample/Directory.Packages.props
@@ -8,9 +8,9 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <!--<PackageVersion Include="SkiaSharp" Version="2.88.8" />
-    <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.8" />
-    --><!--<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.8" />--><!--
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />-->
+    <PackageVersion Include="SkiaSharp" Version="2.88.8" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.8" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
   </ItemGroup>
 </Project>
