ci: bump uno packages

--- a/UI/Navigation/src/Directory.Build.props
+++ b/UI/Navigation/src/Directory.Build.props
@@ -8,8 +8,8 @@
 
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>4.2.2</UnoExtensionsVersion>
+    <UnoExtensionsVersion>5.0.0-dev.316</UnoExtensionsVersion>
     <UnoToolkitVersion>6.2.0-dev.37</UnoToolkitVersion>
-    <UnoThemesVersion>5.1.7</UnoThemesVersion>
+    <UnoThemesVersion>5.2.0-dev.15</UnoThemesVersion>
   </PropertyGroup>
 </Project>
