--- a/reference/ToDo/src/Directory.Build.props
+++ b/reference/ToDo/src/Directory.Build.props
@@ -15,9 +15,9 @@
 
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>5.0.0-dev.316</UnoExtensionsVersion>
-    <UnoToolkitVersion>6.2.0-dev.37</UnoToolkitVersion>
-    <UnoThemesVersion>5.2.0-dev.15</UnoThemesVersion>
+    <UnoExtensionsVersion>4.2.2</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.1.8</UnoToolkitVersion>
+    <UnoThemesVersion>5.1.7</UnoThemesVersion>
     <MicrosoftIdentityClientVersion>4.61.3</MicrosoftIdentityClientVersion>
   </PropertyGroup>
 </Project>
