feat: Add ScottPlot UnoPlatform Quickstart Sample App

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 # Remove everything beginning with a dot
 .*/
+# Except folders present to add support for VS Code and Rider IDE
+!.vscode*/
+!.run*/
 
 # Umbrella
 umbrella_installlog.txt
