--- a/UI/MVUX/MVUX/.editorconfig
+++ b/UI/MVUX/MVUX/.editorconfig
@@ -9,7 +9,7 @@ root = true
 ##########################################
 
 [*]
-indent_style = space
+indent_style = tab
 end_of_line = crlf
 trim_trailing_whitespace = true
 insert_final_newline = true
@@ -41,7 +41,7 @@ end_of_line = lf
 indent_size = 2
 
 [*.xaml]
-indent_size = 2
+indent_size = 4
 charset = utf-8-bom
 
 [*.xml]
