--- a/UI/MVUX/src/MVUX/MVUX.csproj
+++ b/UI/MVUX/src/MVUX/MVUX.csproj
@@ -26,7 +26,6 @@
       the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
       must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
     -->
-    <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
 
     <!--
       UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
@@ -46,6 +45,7 @@
       Localization;
       Navigation;
     </UnoFeatures>
+    <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
 </Project>
