--- a/reference/Counter/XAML-MVUX/Counter/Counter.csproj
+++ b/reference/Counter/XAML-MVUX/Counter/Counter.csproj
@@ -38,5 +38,6 @@
     <UnoFeatures>
       MVUX;
     </UnoFeatures>
+    <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 </Project>
