--- a/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -43,6 +43,7 @@
       MVUX;
       ExtensionsCore;
     </UnoFeatures>
+    <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
 </Project>
