--- a/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -41,6 +41,7 @@
       MVUX;
       ExtensionsCore;
     </UnoFeatures>
+    <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
 </Project>
