--- a/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
@@ -46,6 +46,7 @@
       Http;
       MediaElement;
     </UnoFeatures>
+  <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
 </Project>
