chore: Updating to 5.4 Stable

--- a/reference/SimpleCalc/CSharp-MVVM/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/CSharp-MVVM/SimpleCalculator/SimpleCalculator.csproj
@@ -32,6 +32,8 @@
     -->
     <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
 
+    <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
+
     <!--
       UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
       https://aka.platform.uno/singleproject-features
