chore: Add more details for 5.4 migration regarding temporary adjustment of WindowsSdkPackageVersion

--- a/reference/ToDo/src/ToDo/ToDo.csproj
+++ b/reference/ToDo/src/ToDo/ToDo.csproj
@@ -27,6 +27,10 @@
       the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
       must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
     -->
+    
+    <!-- Uno Platform 5.4 has been updated to use WinAppSDK 1.6, which necessitates a temporary version adjustment until newer versions of .NET 8 SDKs are released. -->
+    <!-- Comment this WindowsSdkPackageVersion line again once .NET SDK version 8.0.403 or later is available. -->
+    <!-- For more details, refer to: https://aka.platform.uno/migrate-from-previous#uno-platform-54 -->
     <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
 
     <!--
