chore: Update uno.sdk

--- a/UI/BindingSources/XAML/Binding/Binding.csproj
+++ b/UI/BindingSources/XAML/Binding/Binding.csproj
@@ -13,6 +13,7 @@
 	<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 	<ApplicationVersion>1</ApplicationVersion>
 
+	  <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
 	<UnoFeatures>
 	  Material;
 	  Toolkit;
