--- a/UI/BindingSources/CSHARP/Binding/Binding.csproj
+++ b/UI/BindingSources/CSHARP/Binding/Binding.csproj
@@ -12,7 +12,7 @@
 	<!-- Versions -->
 	<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 	<ApplicationVersion>1</ApplicationVersion>
-
+	<WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
 	<UnoFeatures>
 	  CSharpMarkup;
 	  Material;
