chore: Add DeepSeek code

--- a/UI/DeepSeek/DeepSeek/appsettings.json
+++ b/UI/DeepSeek/DeepSeek/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppConfig": {
-    "Environment": "Production"
+    "Environment": "Production",
+    "ApiKey": "",
+    "BaseUrl": "https://api.deepseek.com"
   },
   "ApiClient": {
     "UseNativeHandler": true
