--- a/reference/Commerce/src/Directory.Packages.props
+++ b/reference/Commerce/src/Directory.Packages.props
@@ -3,5 +3,7 @@
     To update the version of Uno, you should instead update the Sdk version in the global.json file.
 
     See https://aka.platform.uno/using-uno-sdk for more information.
+    See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages.
+
   -->
 </Project>
