--- a/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/reference/SimpleCalc/CSharp-MVUX/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
